--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 
     <div>
       <div class="row" id="row-1">
-        <a href="#" class="cell column-1 row-1"" id="cell-1">1</a>
-        <a href="#" class="cell column-2 row-1"" id="cell-2">2</a>
-        <a href="#" class="cell column-3 row-1"" id="cell-3">3</a>
+        <a href="#" class="cell column-1 row-1" id="cell-1">1</a>
+        <a href="#" class="cell column-2 row-1" id="cell-2">2</a>
+        <a href="#" class="cell column-3 row-1" id="cell-3">3</a>
       </div>
       <div class="row" id="row-2">
           <a href="#" class="cell column-1 row-2" id="cell-4">4</a>
